Refactor share modal functions for better name input
Refactor share modal functions to improve name handling and validation.

--- a/index.html
+++ b/index.html
@@ -268,7 +268,8 @@
     
     function renderShareModal() {
       if (!state.showShareModal) return '';
-      return `<div class="modal-overlay" onclick="closeShareModal(event)"><div class="modal" onclick="event.stopPropagation()"><h2>Share Your Roster</h2><p>Send this link to your partner, family, or mates so they can see when you're home.</p>${!state.shareLink ? `<input type="text" class="input" placeholder="Your name (e.g., Dave)" value="${state.shareName}" onchange="setShareName(this.value)" oninput="setShareName(this.value)"><div class="modal-buttons"><button class="btn btn-secondary" onclick="closeShareModal(event)">Cancel</button><button class="btn btn-primary" onclick="createShareLink()" ${!state.shareName?'disabled':''}>Create Link</button></div>` : `${state.copySuccess ? '<div class="copy-success">✓ Copied to clipboard!</div>' : ''}<div class="share-link-box">${state.shareLink}</div><div class="modal-buttons"><button class="btn btn-secondary" onclick="closeShareModal(event)">Done</button><button class="btn btn-primary" onclick="copyShareLink()">${state.copySuccess?'Copied!':'Copy Link'}</button></div>`}</div></div>`;
+      const nameInputId = 'share-name-input';
+      return `<div class="modal-overlay" onclick="closeShareModal()"><div class="modal" onclick="event.stopPropagation()"><h2>Share Your Roster</h2><p>Send this link to your partner, family, or mates so they can see when you're home.</p>${!state.shareLink ? `<input type="text" id="${nameInputId}" class="input" placeholder="Your name (e.g., Dave)" value="${state.shareName}"><div class="modal-buttons"><button class="btn btn-secondary" onclick="closeShareModal()">Cancel</button><button class="btn btn-primary" onclick="createShareLink()">Create Link</button></div>` : `${state.copySuccess ? '<div class="copy-success">✓ Copied to clipboard!</div>' : ''}<div class="share-link-box">${state.shareLink}</div><div class="modal-buttons"><button class="btn btn-secondary" onclick="closeShareModal()">Done</button><button class="btn btn-primary" onclick="copyShareLink()">${state.copySuccess?'Copied!':'Copy Link'}</button></div>`}</div></div>`;
     }
     
     function renderCalendar() {
@@ -292,10 +293,19 @@
     window.nextMonth = function() { state.currentDate = new Date(state.currentDate.getFullYear(), state.currentDate.getMonth() + 1, 1); render(); };
     window.goToToday = function() { state.currentDate = new Date(); render(); };
     window.resetSetup = function() { state.setupComplete = false; state.setupStep = 1; state.showSettings = false; saveState(); render(); };
-    window.openShareModal = function() { state.showShareModal = true; state.shareLink = ''; state.copySuccess = false; render(); };
-    window.closeShareModal = function(e) { state.showShareModal = false; state.shareLink = ''; state.shareName = ''; state.copySuccess = false; render(); };
-    window.setShareName = function(v) { state.shareName = v; };
-    window.createShareLink = function() { state.shareLink = generateShareLink(state.shareName); render(); };
+    window.openShareModal = function() { state.showShareModal = true; state.shareLink = ''; state.shareName = ''; state.copySuccess = false; render(); };
+    window.closeShareModal = function() { state.showShareModal = false; state.shareLink = ''; state.shareName = ''; state.copySuccess = false; render(); };
+    window.createShareLink = function() { 
+      const input = document.getElementById('share-name-input');
+      const name = input ? input.value.trim() : '';
+      if (!name) {
+        alert('Please enter your name');
+        return;
+      }
+      state.shareName = name;
+      state.shareLink = generateShareLink(name); 
+      render(); 
+    };
     window.copyShareLink = function() {
       navigator.clipboard.writeText(state.shareLink).then(function() {
         state.copySuccess = true; render();
